# aoc2024

./: Cargo.toml
day1/src/: main.rs
utils/src/: file.rs  lib.rs
